<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ehar.SensorExample.MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <TextView
                style="@style/valueLabel"
                android:id="@+id/accel_x"
                />
            <TextView
                style="@style/letterLabel"
                android:id="@+id/accel_x_label"
                android:text="@string/CapX"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <TextView
                style="@style/valueLabel"
                android:id="@+id/accel_y"
                />
            <TextView
                style="@style/letterLabel"
                android:id="@+id/accel_y_label"
                android:text="@string/CapY"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <TextView
                style="@style/valueLabel"
                android:id="@+id/accel_z"
                />
            <TextView
                style="@style/letterLabel"
                android:id="@+id/accel_z_label"
                android:text="@string/CapZ"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <TextView
                style="@style/valueLabel"
                android:id="@+id/latValue"
                />
            <TextView
                style="@style/letterLabel"
                android:id="@+id/Latitude"
                android:text="@string/Latitude_text"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <TextView
                style="@style/valueLabel"
                android:id="@+id/lonValue"
                />
            <TextView
                style="@style/letterLabel"
                android:id="@+id/Longitude"
                android:text="@string/Longitude_text"
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
